# Claude-Book

./: .gitignore  CLAUDE.md  COMPLETION_REPORT.md  LICENSE  README.md  timeline.md
.claude/: settings.local.json
.claude/agents/: chapter-planner.md  chapter-writer.md  character-reviewer.md  continuity-reviewer.md  state-updater.md  style-linter.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: issue-management.yml
agents/: README.md  character-reviewer.md  continuity-reviewer.md  planner.md  state-updater.md  style-linter.md  writer.md
analysis/: README.md  merge-report.md
bible/: structure.md  structure.md.example  style.md  style.md.example
bible/characters/: _template.md  annie.md  claude.md  dagobert.md  francois.md  mick.md  oncle-henri.md  tante-cecile.md
bible/universe/: _template.md  ile-de-kernach.md  kernach.md  villa-des-mouettes.md
ebook/: .gitignore  EBOOK-GUIDE.md  build-ebook.ps1
ebook/config/: book.yaml  description.md
ebook/templates/: epub.css
scripts/: CLAUDE.md
scripts/detection/: README.md  detection.py  pyproject.toml  test_detection_logic.py
scripts/perplexity/: .gitignore  README.md  final_analysis.md  generate_text.py  initial_analysis.md  pyproject.toml  test_perplexity.py
scripts/perplexity/texts/: blyton_chap1.md  generation_haiku.md  generation_mistral.md
state/: characters.md  knowledge.md  situation.md
state.example/: characters.md  inventory.md  knowledge.md
story/: plan.md  synopsis.md
timeline/: current-chapter.md  history.md
(+151 files in other folders)
